--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -16,6 +16,18 @@
     }
 }
 
+@media screen and (max-device-width:1100px) and (orientation: portrait)  {
+    .dataImageSourceTall {
+        height:80%;
+    }
+}
+
+@media screen and (max-device-width:900px) and (orientation: landscape)  {
+    .dataImageSource {
+        width:60%;
+    }
+}
+
 a,a:visited,a:link {
     color:white;
     text-underline-offset: 2pt;
@@ -35,7 +47,7 @@ a,a:visited,a:link {
     height:15%;
     background-color:white; 
     color:gray;
-    font-size:10pt;
+    font-size:.75em;
     padding-top:10px;
 }
 
@@ -104,7 +116,7 @@ a,a:visited,a:link {
 
 .icon {
     vertical-align:middle;
-    font-size:20px;
+    font-size:1.25em;
     color:white;
 }
 
@@ -123,7 +135,7 @@ a,a:visited,a:link {
 }
 
 #overlay {
-   font-size:25px;
+   font-size:1.25em;
     display: none; 
     position: absolute;
     left: 5%; 
@@ -142,6 +154,20 @@ a,a:visited,a:link {
     clear:both;
     width:100%;
     height:60%;
+}
+
+@media screen and (max-device-width:700px) and (orientation: portrait)  {
+
+    #overlayNav {
+       height:40%; 
+    }
+}
+
+@media screen and (max-device-width:700px) and (orientation: landscape)  {
+
+    #overlayNav {
+       height:70%; 
+    }
 }
 
 .overlayNavElement {
@@ -175,10 +201,24 @@ a,a:visited,a:link {
     color:gray;
     padding: 60px 60px 0px 60px;
     text-align:left;
-    font-size: 12pt;
+    font-size: .8em;
     max-width: 1000px;
     margin:0 auto;
     line-height: 1.25;
+}
+
+@media screen and (max-device-width:700px) and (orientation: portrait)  {
+
+    #workText {
+        padding: 10px 60px 0px 60px;
+    }
+}
+
+@media screen and (max-device-width:900px) and (orientation: landscape)  {
+
+    #workText {
+        padding: 10px 60px 0px 60px;
+    }
 }
 
 #overlayNavNext {
